fix responsiveness alignment

--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -2,7 +2,7 @@
   @apply fixed top-0 left-0 z-[1001] transition-all w-full;
 
   .nav_logo {
-    @apply md:text-4xl text-2xl font-bold cursor-pointer font-heading;
+    @apply lg:text-4xl text-2xl font-bold cursor-pointer font-heading;
   }
 
   &[data-style="initial"] {
@@ -11,7 +11,7 @@
     }
 
     .nav_link {
-      @apply text-primary hover:text-secondary md:text-white-accent-ghost md:hover:text-white-accent-lavender;
+      @apply text-primary hover:text-secondary lg:text-white-accent-ghost lg:hover:text-white-accent-lavender;
       &::after {
         @apply bg-white-accent-lavender;
       }
@@ -22,7 +22,7 @@
   }
 
   &[data-style="scroll"] {
-    @apply bg-white shadow-md;
+    @apply bg-white shadow-lg;
 
     .nav_logo {
       @apply text-primary;
@@ -41,15 +41,15 @@
   }
 
   .hamburger_menu {
-    @apply md:hidden block text-2xl;
+    @apply lg:hidden block text-2xl;
   }
 
   .nav_links {
-    @apply absolute w-full h-[100vh] md:h-full top-0 z-10 transition-all md:z-0 md:w-[20%]  bg-white md:bg-transparent md:static;
+    @apply absolute w-full h-[100vh] lg:h-full top-0 z-10 transition-all lg:z-0 lg:w-[20%]  bg-white lg:bg-transparent lg:static;
   }
 
   .nav_link {
-    @apply text-base relative lg:right-0 md:right-4 right-0;
+    @apply text-base relative whitespace-nowrap lg:right-4 right-0;
   }
 
   .nav_link::after {
@@ -81,12 +81,12 @@
   }
 
   .nav_logo {
-    @apply md:w-[10%];
+    @apply lg:w-[10%];
   }
 }
 
 .searchbar {
-  @apply w-[100%] border-2 border-white-accent-lavender border-r-0 rounded-l-lg p-2 text-xs focus:border-tertiary outline-none font-base;
+  @apply w-[90%] border-2 border-white-accent-lavender border-r-0 rounded-l-lg p-2 text-xs focus:border-tertiary outline-none font-base;
 }
 
 .searchbar:focus-visible + button {
